src/Carousel/Carousel.scss
@use '../GlobalVariables.scss' as GV;

$button-width: 30px;
$move-time: 0.7s;
$center-column: min(calc(600px - $button-width - $button-width), calc(100vw - $button-width - $button-width));
.carousel {
    margin: 5px;
    width: calc(600px - 5px);
    max-width: calc(100vw - 10px);
    aspect-ratio: 16 / 9;
    background-color: rgba(GV.$primary, 1);
    border-radius: GV.$border-radius;
    overflow: hidden;
    display: grid;
    align-items: center;
    justify-content: center;
    grid-template-columns: $button-width $center-column $button-width;

    button {
        height: calc(25% - 25px - 25px);
        z-index: 1;
        padding: 0;
        background-color: transparent;
        border-color: transparent;
        color: lighten($color: GV.$primary, $amount: 50);
        &:disabled {
            color: grey;

            &:hover {
                color: grey;
            }
        }
        &:hover {
            color: GV.$text-on-dark-colour;
        }

        svg {
            margin-left: 0;
        }
    }
}

.carousel-item-container {
    display: grid;
    grid-auto-flow: column;
    grid-auto-columns: 100%;
    width: 100%;
    height: calc(100% - 50px);
}

.carousel-item {
    width: 100%;
    max-width: calc(600px - $button-width - $button-width);
    margin-right: calc(25px + $button-width);
    border-radius: GV.$border-radius;
    background-color: GV.$background;
    position: relative;
    transition: left $move-time ease-in-out, transform $move-time ease-in-out, box-shadow $move-time ease-in-out;
    transform: scale(75%);
    display: flex;
    justify-content: center;
    align-items: center;

    .inner-display {
        margin: 15px;
        width: 100%;
        height: 80%;
        display: flex;
        flex-direction: column;
        .date {
            margin: 0 0 15px;
        }

        .entry {
            margin: 0 15px 0;
        }

    }

    &.selected {
        transform: scale(100%);
        box-shadow: GV.$box-shadow-level-1;
    }
}

.empty-entries {
    grid-column: 1 / 4;
    text-align: center;
}

